--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb://127.0.0.1:27017/bookmark_manager_mern
+MONGO_URI = mongodb+srv://akulapranee99:Praneeth99@cluster0.qil319e.mongodb.net/?appName=Cluster0
 JWT_SECRET = 1234
